# git-cms

./: .env.example  .gitignore  Cargo.toml  README.md  cms.example.toml  cms.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
content/: welcome.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
src/: auth.rs  config.rs  content.rs  error.rs  git_repo.rs  github.rs  main.rs  sessions.rs
src/api/: auth.rs  files.rs  health.rs  mod.rs  sessions.rs
